--- a/package.json
+++ b/package.json
@@ -22,19 +22,20 @@
     },
     "homepage": "https://github.com/midudev/curso-platzi-react-avanzado#readme",
     "devDependencies": {
-        "@babel/core": "^7.10.4",
-        "@babel/preset-env": "^7.10.4",
-        "@babel/preset-react": "^7.10.4",
-        "babel-loader": "^8.1.0",
+        "@babel/core": "7.10.4",
+        "@babel/preset-env": "7.10.4",
+        "@babel/preset-react": "7.10.4",
+        "babel-loader": "8.1.0",
         "html-webpack-plugin": "4.3.0",
-        "standard": "^14.3.4",
+        "standard": "14.3.4",
         "webpack": "4.43.0",
         "webpack-cli": "3.3.12",
         "webpack-dev-server": "3.11.0"
     },
     "dependencies": {
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
+        "styled-components": "5.1.1"
     },
     "standard": {
         "ignore": [
@@ -42,6 +43,8 @@
         ]
     },
     "eslintConfig": {
-        "extends": ["./node_modules/standard/eslintrc.json"]
+        "extends": [
+            "./node_modules/standard/eslintrc.json"
+        ]
     }
 }
