--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
         "webpack-dev-server": "3.11.0"
     },
     "dependencies": {
-        "intersection-observer": "^0.11.0",
+        "apollo-boost": "0.4.9",
+        "graphql": "15.3.0",
+        "intersection-observer": "0.11.0",
         "react": "16.13.1",
+        "react-apollo": "3.1.5",
         "react-dom": "16.13.1",
-        "react-icons": "^3.10.0",
+        "react-icons": "3.10.0",
         "styled-components": "5.1.1"
     },
     "standard": {
