--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "build": "webpack",
         "lint": "standard",
         "dev": "webpack-dev-server --history-api-fallback",
+        "serve:dev": "webpack --mode 'development' && npx serve dist -s",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -33,13 +34,14 @@
         "webpack-dev-server": "3.11.0"
     },
     "dependencies": {
-        "@reach/router": "^1.3.4",
+        "@reach/router": "1.3.4",
         "apollo-boost": "0.4.9",
         "graphql": "15.3.0",
         "intersection-observer": "0.11.0",
         "react": "16.13.1",
         "react-apollo": "3.1.5",
         "react-dom": "16.13.1",
+        "react-helmet": "6.1.0",
         "react-icons": "3.10.0",
         "styled-components": "5.1.1"
     },
