--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "lint": "standard",
         "dev": "webpack-dev-server --history-api-fallback",
         "serve:dev": "webpack --mode 'development' && npx serve dist -s",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "cypress open"
     },
     "repository": {
         "type": "git",
@@ -27,20 +27,21 @@
         "@babel/preset-env": "7.10.4",
         "@babel/preset-react": "7.10.4",
         "babel-loader": "8.1.0",
+        "cypress": "4.10.0",
         "html-webpack-plugin": "4.3.0",
         "standard": "14.3.4",
         "webpack": "4.43.0",
         "webpack-cli": "3.3.12",
         "webpack-dev-server": "3.11.0",
-        "webpack-pwa-manifest": "^4.2.0",
-        "workbox-webpack-plugin": "^5.1.3"
+        "webpack-pwa-manifest": "4.2.0",
+        "workbox-webpack-plugin": "5.1.3"
     },
     "dependencies": {
         "@reach/router": "1.3.4",
         "apollo-boost": "0.4.9",
         "graphql": "15.3.0",
         "intersection-observer": "0.11.0",
-        "prop-types": "^15.7.2",
+        "prop-types": "15.7.2",
         "react": "16.13.1",
         "react-apollo": "3.1.5",
         "react-dom": "16.13.1",
